# susanoo

./: .env.example  .gitignore  LICENSE  README.md  pyproject.toml  sam-template.yaml  samconfig.toml
app/: call.py  call_test.py  dynamodb_client.py  main.py  models.py  session_manager.py
