[project]
name = "Susanoo"
version = "0.1.0"
description = "POST を受けたら電話を輪番発信"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi[standard]>=0.116.1",
    "mangum>=0.19.0",
    "pydantic-settings>=2.10.1",
    "pynamodb>=6.1.0",
    "vonage>=4.4.3",
]

[tool.ruff]
lint.select = ["ALL"]
lint.ignore = ["D203", "D213", "COM812"]

[dependency-groups]
dev = [
    "pytest>=8.4.1",
]
